[tool.poetry]
name = "cn-lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
networkx = "^2.8"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
seaborn = "^0.11.2"
Shapely = "^1.8.2"
pyproj = "^3.3.1"
gdal = {path = "Project/geopandas_dependencies/GDAL-3.4.2-cp39-cp39-win_amd64.whl"}
fiona = {path = "Project/geopandas_dependencies/Fiona-1.8.21-cp39-cp39-win_amd64.whl"}
geopandas = "^0.10.2"
future = "^0.18.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.black]
line_length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
